--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,7 +77,7 @@ body {
     #container {
         display: grid;
         grid-template-rows: 70px auto;
-        height: 100%;
+        // height: 100%;
         
         
         // #content {
@@ -97,18 +97,18 @@ body {
             
                    
             
-                    ul {
-                        margin-top: 20px;;
+                    // ul {
+                    //     // margin-top: 20px;
                         
-                        li {
-                            padding:0;
+                    //     li {
+                    //         // padding:0;
             
-                            a {
-                                font-size: 1em;
-                                font-weight: 300;
-                            }
-                        }
-                    }
+                    //         a {
+                    //             // font-size: 1em;
+                    //             // font-weight: 300;
+                    //         }
+                    //     }
+                    // }
                 }
             // }
         }
@@ -162,33 +162,33 @@ body { margin: 0;
 
 
 
-  .enjoy-css {
-    display: inline-block;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    cursor: pointer;
-    padding: 10px 20px;
-    border: 1px solid #018dc4;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    font: normal 16px/normal "Times New Roman", Times, serif;
-    color: rgba(255,255,255,0.9);
-    -o-text-overflow: clip;
-    text-overflow: clip;
-    background: #0199d9;
-    -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
-    box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
-    text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
-    -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-    -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-    -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-    transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-    -webkit-transform: rotateX(9deg) rotateY(25deg) rotateZ(19deg)   ;
-    transform: rotateX(9deg) rotateY(25deg) rotateZ(19deg)   ;
-    -webkit-transform-origin: 55% 50% 0;
-    transform-origin: 55% 50% 0;
-  }
+//   .enjoy-css {
+//     display: inline-block;
+//     -webkit-box-sizing: content-box;
+//     -moz-box-sizing: content-box;
+//     box-sizing: content-box;
+//     cursor: pointer;
+//     padding: 10px 20px;
+//     border: 1px solid #018dc4;
+//     -webkit-border-radius: 3px;
+//     border-radius: 3px;
+//     font: normal 16px/normal "Times New Roman", Times, serif;
+//     color: rgba(255,255,255,0.9);
+//     -o-text-overflow: clip;
+//     text-overflow: clip;
+//     background: #0199d9;
+//     -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+//     box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+//     text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
+//     -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+//     -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+//     -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+//     transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+//     -webkit-transform: rotateX(9deg) rotateY(25deg) rotateZ(19deg)   ;
+//     transform: rotateX(9deg) rotateY(25deg) rotateZ(19deg)   ;
+//     -webkit-transform-origin: 55% 50% 0;
+//     transform-origin: 55% 50% 0;
+//   }
 
   // https://stackoverflow.com/questions/48352238/why-mat-select-not-working-inside-the-modal-onclick-it-shows-options-behind-th -> necessary for add-product login/register modal (mat select city & dorm appears behind modal without this.)
   .cdk-global-overlay-wrapper, .cdk-overlay-container { z-index: 9999!important; }
